# attctrl_zoho

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build-push.yml
src/attctrl/: api.py  browser.py  config.py  logger.py  main.py  scheduler.py  ui.py
src/attctrl/static/: just-validate.production.min.js
src/attctrl/templates/: base.html  index.html  login.html  scripts.html
src/attctrl/templates/components/: datetime.html  new_task.html  task_view.html  tasks_view.html
src/attctrl/templates/scripts/: htmx.html  notifications.html  validation.html
